syntax = "proto3";

option csharp_namespace = "GrpcServer";

service Customer{
	rpc GetCustomerInfo (CustomerLookupModel) returns (CustomerModel);
	rpc GetNewCustomers (NewCustomerRequest) returns (stream CustomerModel);
}

message NewCustomerRequest{

}

message CustomerLookupModel{
	int32 userId =1;
}
message CustomerModel{
	string firtName = 1;
	string lastName = 2;
	string emailAddress = 3;
	bool isActive = 4;
	int32 age = 5;
}